# llm-moonshot

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  llm_moonshot.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/llm_moonshot/: __init__.py  _cache.py  _chat.py  _models.py
tests/: test_llm_moonshot.py
