[project]
name = "zopyx.llm-moonshot"
version = "0.3.1"
description = "Run prompts against LLMs hosted by Moonshot"
readme = "README.md"
authors = [{ name = "NickMystic" }]
requires-python = ">=3.9"
dependencies = ["llm>=0.22", "httpx", "httpx-sse", "rich>=13.0"]
classifiers = ["License :: OSI Approved :: Apache Software License"]

[project.urls]
Homepage = "https://github.com/ghostofpokemon/llm-moonshot"
Repository = "https://github.com/ghostofpokemon/llm-moonshot"
Changelog = "https://github.com/ghostofpokemon/llm-moonshot/releases"
Issues = "https://github.com/ghostofpokemon/llm-moonshot/issues"

[project.entry-points."llm"]
moonshot = "llm_moonshot"

[project.optional-dependencies]
test = ["pytest", "pytest-httpx", "pytest-asyncio", "cogapp"]

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["llm_moonshot"]
