[project]
name = "zopyx.llm-moonshot"
version = "0.3.2"
description = "Run prompts against LLMs hosted by Moonshot"
readme = "README.md"
authors = [{ name = "NickMystic" }]
requires-python = ">=3.9"
license = "Apache-2.0"
dependencies = ["llm>=0.22", "httpx", "httpx-sse", "rich>=13.0"]

[project.urls]
Homepage = "https://github.com/zopyx/llm-moonshot"
Repository = "https://github.com/zopyx/llm-moonshot"
Changelog = "https://github.com/zopyx/llm-moonshot/blob/main/CHANGELOG.md"
Issues = "https://github.com/zopyx/llm-moonshot/issues"

[project.entry-points."llm"]
moonshot = "llm_moonshot"

[project.optional-dependencies]
test = ["pytest", "pytest-httpx", "pytest-asyncio", "cogapp"]

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["llm_moonshot"]
